Improve TOC presentation for table/figure lists

--- a/14882.css
+++ b/14882.css
@@ -41,6 +41,7 @@ div.tocChapter { display: none; }
 .unfolded_abbr_ref { display: none; }
 
 .secnum { display: inline-block; }
+span.secnum { min-width: 35pt; }
 .annexnum { display: block; }
 
 div.marginalizedparent {
