--- a/14882.css
+++ b/14882.css
@@ -40,8 +40,7 @@ div.tocChapter { display: none; }
 :target .unfolded_abbr_ref { float: right; display: inherit; }
 .unfolded_abbr_ref { display: none; }
 
-.secnum { display: inline-block; }
-span.secnum { min-width: 35pt; }
+.secnum { display: inline-block; min-width: 35pt; }
 .annexnum { display: block; }
 
 div.marginalizedparent {
