--- a/ranges-ts/14882.css
+++ b/ranges-ts/14882.css
@@ -131,6 +131,7 @@ span.texttt { font-family: monospace; }
 span.added { color:#009999; text-decoration:underline; }
 span.removed { color:#FF0000; text-decoration:line-through; }
 span.enote { color:#0000FF; }
+span.cite { display:none; }  /* we can't do cites right now */
 span.phantom { color: white; }
 	/* Unfortunately, this way the text is still selectable. Another
 	option is display:none, but then we lose the nice layout.
