--- a/14882.css
+++ b/14882.css
@@ -541,6 +541,7 @@ table.enumerate td:first-child {
         background-color: #171717;
         color: #b0b0b0;
     }
+    span.mjx-mstyle { color: #b0b0b0 !important }
 
     a { color: #549df2; }
 
